fix #19824 Section heading not visible in the add/edit ingestion page (#19827)

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/rjsf.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/rjsf.less
@@ -20,10 +20,6 @@
   display: none;
 }
 
-.rjsf.no-header .header-title-wrapper {
-  display: none;
-}
-
 .rjsf .form-group.field {
   margin: 12px 0;
 }
